--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,5 +1,5 @@
 {
     "html": {
-        "unformatted": ["a", 'span', 'strong'] // List of tags that should not be reformatted
+        "unformatted": ["a", 'span', 'strong']
     }
 }
