--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "~0.8.26",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
     "express": "^4.16.3",
+    "express-sanitizer": "^1.0.4",
+    "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
     "mongoose-unique-validator": "^2.0.1",
-    "document-register-element": "^1.7.2"
+    "rxjs": "^6.0.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
